--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -8,3 +8,11 @@ $padding:20px;
 $text-align: center;
 $margin-top: 30px;
 $margin-left: 500px;
+$size: cover;
+$backgroud-repeat: no-repeat;
+$background-image: url("https://www.datocms-assets.com/6737/1533586211-nudey-beach-fitzroy-island-depositphotos.jpg?auto=compress%2Cformat&fm=jpg");
+$overflow: auto;
+$height: 100vh;
+$max-height: 150vh;
+$align-text:center;
+$float: center;
