--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -10,7 +10,7 @@ $margin-top: 30px;
 $margin-left: 500px;
 $size: cover;
 $backgroud-repeat: no-repeat;
-$background-image: url("https://www.datocms-assets.com/6737/1533586211-nudey-beach-fitzroy-island-depositphotos.jpg?auto=compress%2Cformat&fm=jpg");
+$background-image: url("https://www.luxurytraveleasy.com/wp-content/uploads/2018/05/fyj.jpg");
 $overflow: auto;
 $height: 100vh;
 $max-height: 150vh;
